[package]
name = "dht-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
fastrand = { version = "2" }
color-backtrace = { version = "0.7" }
ctor = "0.4.2"
thiserror = "2.0.12"
tracing = { version = "^0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sha1 = "0.10.6"
axum = { version = "0.8.4", features = ["http2", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libc = "0.2.172"
rusqlite = { version = "0.36.0", features = ["bundled"] }
async-trait = "0.1.88"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
lru = "0.14.0"
rc4 = "0.1.0"
num-bigint = "0.4.6"
lazy_static = "1.5.0"
reqwest = { version = "0.12.21", features = ["gzip", "http2"] }
urlencoding = "2.1.3"
url = "2.5.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Networking_WinSock"]}

[build-dependencies]
cc = "1.0"
